<resources>
    <string name="app_name">IB2026DavidCV</string>
    <string name="cancel">Cancelar</string>
    <string name="tituloPriceRangeSelector">Por un importe</string>
    <string name="LastInvoiceCard">Última factura</string>
    <string name="numCard">**** 1234</string>
    <string name="seeBills">Ver facturas</string>
    <string name="noBills">No hay facturas</string>
    <string name="noAviableBills">No hay facturas disponibles</string>
    <string name="noAviableBillsFilter">No hay facturas disponibles para los siguientes filtros</string>
    <string name="recargar">Recargar</string>
    <string name="error">Error</string>
    <string name="serverFail">Algo salió mal con el servidor</string>
    <string name="useLocal">Usar datos en local</string>
    <string name="opinion">Tu opinión nos importa</string>
    <string name="respondLater">Responder más tarde</string>
    <string name="bsText">¿Cómo de probable es que recomiendes esta app a amigos o familiares para que realicen sus gestiones?</string>
    <string name="fsTituloFecha">Por fecha</string>
    <string name="fsSubtituloFecha1">Desde</string>
    <string name="fsSubtituloFecha2">Hasta</string>
    <string name="fsTituloEstado">Por estado</string>
    <string name="fsButtonDelete">Borrar filtros</string>
    <string name="fsButtonApply">Aplicar Filtros</string>
    <string name="blciTitle">Histórico de facturas</string>
    <string name="blciButtonFilter">Filtrar</string>
    <string name="blsTitle">Mis facturas</string>
    <string name="blsTabText1">Luz</string>
    <string name="blsTabText2">Gas</string>
    <string name="blsSubtitleAddress">C/ PALMA - ARTA KM 49, 5 , 4°A - PINTO - MADRID</string>
    <string name="isTitle">Bienvenido</string>
    <string name="isSubtitle">Mis Servicios</string>
    <string name="isSwitchDataOrigin">Uso de datos en red</string>
    <string name="isServiceLight">Luz</string>
    <string name="isServiceGas">Gas</string>
    <string name="bfvmToastStartDate">La fecha de inicio no puede ser posterior a la fecha de fin</string>
    <string name="bfvmToastEndDate">La fecha de fin no puede ser anterior a la fecha de inicio</string>
    <string name="matbTitle">Atrás</string>
    <string name="blcUnknownError">Error desconocido</string>
    <string name="blciToast">Factura no disponible</string>
    <string name="bsToast">Gracias por su opinión</string>
    <string name="fsTituloFiltros">Filtrar</string>
    <string name="confirm">Ok</string>
    <string name="isSubtitleBills">Facturas</string>
    <string name="isSubtitleContracts">Contratos</string>
    <string name="isServiceContract">Contratos</string>
    <string name="clsTitle">Factura electrónica</string>
    <string name="noAviableContracts">No hay contratos disponibles</string>
    <string name="noContracts">No hay contratos</string>
    <string name="cacTitleAccount">Email vinculado a tu cuenta:</string>
    <string name="cacTextAccountEmail">a*****a@a.com</string>
    <string name="cacTitleAccountEmail">Email vinculado a tu cuenta:</string>
    <string name="cacTitletEmail">¿En qué email deseas recibir tus facturas?</string>
    <string name="cacTitleEmailLinked">¿En qué email deseas recibir tus facturas?</string>
    <string name="cacLabelEmail">¿En qué email deseas recibir tus facturas?</string>
    <string name="cscBasicInfo">Información básica sobre protección de datos</string>
    <string name="cscLegalTextResponsable">Responsable</string>
    <string name="cscLegalTextFinalidad">Finalidad</string>
    <string name="cscLegalTextDerechos">Derechos</string>
    <string name="cscLegalTextResponsableDescription">Iberdrola Clientes S.A.U.</string>
    <string name="cscLegalTextFinalidadDescription">Gestión de la factura electrónica.</string>
    <string name="cscLegalTextDerechosDescription">Acceso, rectificación, supresión, limitación del tratamiento, portabilidad de datos u oposición, incluida la oposición a decisiones individuales automatizadas.</string>
    <string name="moreInfo">Más info</string>
    <string name="cscPolicy">He leído y acepto la Política de privacidad, acepto las Condiciones Generales y Particulares...</string>
    <string name="cscBack">Anterior</string>
    <string name="cscNext">Siguiente</string>

    <!-- ContractActiveInfoContent Strings -->
    <string name="caicTitleLight">Contrato de Luz</string>
    <string name="caicAddress">c/ apartado de correos 184, 5, 1°b - los dolores-el plan - murcia</string>
    <string name="caicInfoText">Actualmente recibes las facturas electrónicas de este contrato al:</string>
    <string name="caicEmailTitle">Recibes tus facturas en este email</string>
    <string name="caicEmailValue">pepe2@gmail.com</string>
    <string name="caicAlertText">Recuerda que la factura electrónica es un requisito de este Plan, por lo que no es posible desactivarla.</string>
    <string name="caicButtonModify">Modificar email</string>

    <!-- ContractEmailChangeContent Strings -->
    <string name="ceccTitle">Modificar email</string>
    <string name="ceccLabelNewEmail">* Nuevo email</string>
    <string name="ceccClose">Cerrar</string>
    <string name="rcibTextResendCode">Volver a enviar</string>
    <string name="rcibTitleResendCode">¿No has recibido el código?</string>
    <string name="rcibTextFindCode">Si no lo encuentras, podemos volver a enviar el SMS.</string>
    <string name="cvcClose">Cerrar</string>
    <string name="cvcTitleActivate">Activa tu factura electrónica</string>
    <string name="cvcSubtitleInsertCode">Introduce tu código de verificación</string>
    <string name="cvcTextFieldVerifyCode">* Código de verificación</string>
    <string name="Back">Anterior</string>
    <string name="Next">Siguiente</string>
    <string name="close">Cerrar</string>
    <string name="sbTitle">Hemos vuelto a enviar un SMS con tu código de verificación</string>
    <string name="cacErrorInvalidEmail">Introduce un email válido</string>
    <string name="cacActivateElectronicBill">Activa tu factura electrónica</string>
    <string name="cacLabelEmailText">* Email</string>
    <string name="cascTitleModify">¡Has modificado correctamente tu email!</string>
    <string name="cascTitleActivate">¡Has activado correctamente tu factura electrónica!</string>
    <string name="cascAccept">Aceptar</string>
    <string name="caicButtonDesactivate">Desactivar factura</string>
    <string name="cascTitleDesactivate">¡Se ha desactivado el contrato con éxito!</string>
    <string name="cvcTitleModifyEmail">Verificar la modificación del email</string>
    <string name="cvcTitleDesactivate">Desactivar el contrato</string>
    <string name="isTitleLogged">"Hola, "</string>
    <string name="epsTitle">Editar Perfil</string>
    <string name="epsName">Nombre</string>
    <string name="epsEmail">Email</string>
    <string name="epsSaveChanges">Guardar cambios</string>
    <string name="clbContractInactive">Deshabilitado </string>
    <string name="sbContractDisabled">Deshabilitado</string>
    <string name="cpccTitle">Modificar número de teléfono</string>
    <string name="cacTitlePhoneLinked">A que número de teléfono quieres tener asociado el contrato</string>
    <string name="ceccLabelNewPhone">* Nuevo número de teléfono</string>
    <string name="caicButtonModifyPhone">Modificar número telefónico</string>
    <string name="cascTitleModifyPhone">¡Has modificado correctamente tu número telefónico!</string>
    <string name="cvcTitleModifyPhone">Verifica la modificación del número telefónico</string>
    <string name="isTitlePage">Inicio</string>
    <string name="ebsDeleteFilters">Borrar filtros</string>
    <string name="isServiceOr">No hay servicios operativos por el  momento.</string>
    <string name="ecs_GoBack">Volver</string>
    <string name="blciButtonOk">Ok</string>
    <string name="blciText">Esta función aún no está disponible</string>
    <string name="dataFail">Error en la obtención de los datos</string>
    <string name="tryAgain">Reintentar</string>
    <string name="goBack">Volver a inicio</string>
    <string name="csc_Txt1Policy">"He leído y acepto la Politica de privacidad, acepto las "</string>
    <string name="csc_spTxt1Policy">Condiciones Generales</string>
    <string name="csc_Txt2Policy">" y Particulares de la oferta y la suscripción a Factura Electrónica."</string>
    <string name="cvcTextVerifyIdentity">Para verificar tu identidad, hemos enviado un código al teléfono </string>
    <string name="cvcTextVerifyIdentityEnd">. Por favor, introdúcelo a continuación.</string>
    <string name="rcibTextNoMoreResendCode">Te has quedado sin opciones de reiniciar</string>
    <string name="cvcTitleTimeLeft">"Tiempo restante para reiniciar los intentos"</string>
    <string name="cvcTextTimeLeftStart">"Quedan "</string>
    <string name="cvcTextTimeLeftEnd">" para que se reinicien los reenvios."</string>
    <string name="Ok">Ok</string>
    <string name="dateSelector">Seleccionar fecha</string>
    <string name="cpcToast">Se ha cancelado la edición del número de teléfono</string>
    <string name="cascTitleModifyCancel">Se ha cancelado la modificación del email.</string>
    <string name="cascTitleActivateCancel">Se ha cancelado la activación del contrato</string>
    <string name="cascTitleDesactivateCancel">Se ha cancelado la modificación del estado del contrato</string>
    <string name="ebsBackInitial">Volver al inicio</string>
    <string name="refresh">Refrescar</string>
    <string name="delete">Eliminar</string>
    <string name="deleteFilters">Eliminar filtros</string>
    <string name="deleteFiltersText">¿Está seguro de que desea limpiar todos los filtros aplicados?</string>
    <string name="textoAgradecimiento">Tu valoración nos ayuda a seguir mejorando dAcord para ofrecerte el mejor servicio posible.</string>
    <string name="thanks">¡Muchas gracias!</string>
    <string name="cascSuccessVerify">Verificación correcta</string>
    <string name="cascNewCode">Nuevo código de verificación</string>
    <string name="cascNewCodeText">"Tu código de verificación es: "</string>
    <string name="ad_ConfigureIPTitle">Configurar IP Local</string>
    <string name="ad_ConfigureIPText">Introduce la IP de tu PC donde corre Mockoon:</string>
    <string name="ad_ConfigureIPLabel">Dirección IP</string>
    <string name="ad_ConfigureIPPlaceHolder">192.168.1.XX</string>
    <string name="descriptionConexionButton">Modo de conexión</string>
    <string name="dropMenuItemTextEmulator">Emulador (10.0.2.2)</string>
    <string name="dropMenuItemTextADB">ADB Reverse (127.0.0.1)</string>
    <string name="dropMenuItemTextIP">"IP Local PC "</string>
    <string name="testError">Error de prueba</string>
    <string name="OnErrorEmail">Introduce un email válido</string>
    <string name="OnErrorPhone">Introduce un número de teléfono válido</string>
    <string name="OnErrorName">Introduce un nombre válido</string>
    <string name="emailForSuccessText">"Pronto recibirás un correo electrónico de verificación para recibir tus facturas en la dirección "</string>
    <string name="rcibTextOneMoreResendCode">Recuerda que hoy te queda un intento.</string>
</resources>
