...
    // Estado para controlar la animación de refresco
    var isRefreshing by remember { mutableStateOf(false) }
    val scope = rememberCoroutineScope()

    val options = listOf(
        AccountOption(
            "Modificar datos",
            Icons.Outlined.Email,
            {
                onNavigate(Routes.ACCOUNT_EDIT)
                analytics.logEvent ( "ButtonModifyAccount" ) {
                    param("eventType", "Click")
                }
...
